video: add fallback to SVG for blurred backdrop (fixes #32)

--- a/src/css/Video.css
+++ b/src/css/Video.css
@@ -15,7 +15,10 @@
 
   min-width: 100%;
   min-height: 100%;
-  filter: blur(1em);
+
+  @modifier blurry {
+    filter: blur(1em);
+  }
 }
 
 @component YouTubePlayer {
